--- a/www/createProject.html
+++ b/www/createProject.html
@@ -26,28 +26,47 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-        <title>MobileTimeRecording</title>
+        <title>Create a new project</title>
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-xs-12">
-                    <div class="panel-group text-center" id="accordion" role="tablist" aria-multiselectable="true">
-                        <div class="panel panel-default">
-                            <div class="panel-heading" role="tab" id="projX" data-toggle="collapse" data-parent="#accordion" href="#projXbody" aria-expanded="true" aria-controls="collapseOne" onclick="startStop()">
-                                <h4 class="panel-title">
-                                    Project X
-                                </h4>
-                            </div>
-                            <div id="projXbody" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                                <div class="panel-body">
-                                    <input class="btn btn-default" id="counter" value="0:0:0" />
-                                    <!--<button class="btn btn-default" id="counter" value="">00:00:00</button>-->
-                                    <button class="btn btn-danger" onclick="stop()"><span class="glyphicon glyphicon-stop"></span></button>
+                <div class="col-md-12">
+                    <form class="form-horizontal">
+                        <fieldset>
+
+                            <!-- Form Name -->
+                            <legend>Create a new Project</legend>
+
+                            <!-- Text input-->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="project.id">Project ID</label>
+                                <div class="col-md-4">
+                                    <input id="project.id" name="project.id" type="text" placeholder="Please enter the project ID" class="form-control input-md" required="">
+
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
+                            <!-- Text input-->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="project.name">Project name</label>
+                                <div class="col-md-4">
+                                    <input id="project.name" name="project.name" type="text" placeholder="Please enter the project name" class="form-control input-md" required="">
+
+                                </div>
+                            </div>
+
+                            <!-- Button (Double) -->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="submit"></label>
+                                <div class="col-md-8">
+                                    <button id="submit" name="submit" class="btn btn-info" onclick="TODO-function">Save</button>
+                                    <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Cancel</a>
+                                </div>
+                            </div>
+
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
@@ -55,7 +74,5 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="cordova.js"></script>
         <script src="js/index.js"></script>
-        <script src="js/recordTime.js"></script>
-
     </body>
 </html>
