--- a/www/createProject.html
+++ b/www/createProject.html
@@ -24,8 +24,8 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Create a new project</title>
     </head>
     <body>
@@ -36,7 +36,7 @@
                         <fieldset>
 
                             <!-- Form Name -->
-                            <legend>Create a new Project</legend>
+                            <legend>Create a new project</legend>
 
                             <!-- Text input-->
                             <div class="form-group">
