--- a/www/index.html
+++ b/www/index.html
@@ -24,11 +24,12 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>MobileTimeRecording</title>
     </head>
     <body>
+        <!-- project list container -->
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -42,13 +43,19 @@
                             <div id="projXbody" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <input class="btn btn-default" id="counter" value="0:0:0" />
-                                    <!--<button class="btn btn-default" id="counter" value="">00:00:00</button>-->
                                     <button class="btn btn-danger" onclick="stop()"><span class="glyphicon glyphicon-stop"></span></button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- add new project button -->
+        <div class="container">
+            <div class="form-group">
+                <a href="createProject.html" class="btn btn-info btn-block"><span class="glyphicon glyphicon-plus"></span> add new project</a>
             </div>
         </div>
         <script src="js/jquery-2.1.3.min.js"></script>
