--- a/www/createProject.html
+++ b/www/createProject.html
@@ -71,6 +71,7 @@
         <script src="js/jquery-2.1.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="cordova.js"></script>
+        <script src="SQLitePlugin.js"></script>
         <script src="js/index.js"></script>
         <script src="js/createProject.js"></script>
     </body>
