--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,13 @@
         <!-- project list container -->
         <div class="container">
             <div class="row">
+                <!-- notifications -->
+                <div class="col-xs-12">
+                    <div id="notification" class="hidden" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <div id="notificationInner"></div>
+                    </div>
+                </div>
                 <div class="col-xs-12">
                     <div class="panel-group text-center" id="ProjectList" role="tablist" aria-multiselectable="true">
                     </div>
@@ -25,6 +32,13 @@
         <div class="container">
             <div class="form-group">
                 <a href="createProject.html" class="btn btn-info btn-block"><span class="glyphicon glyphicon-plus"></span> add new project</a>
+            </div>
+        </div>
+
+        <!-- create profile button -->
+        <div class="container">
+            <div class="form-group">
+                <a href="createProfile.html" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-plus"></span> create profile</a>
             </div>
         </div>
 
