added addSession functionality and fixed bugs in profile creation files

--- a/www/createProfile.html
+++ b/www/createProfile.html
@@ -36,9 +36,9 @@
 						
 						<!-- Surname input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="profile.surename">Surname</label>
+                            <label class="col-md-4 control-label" for="profile.surname">Surname</label>
                             <div class="col-md-4">
-                                <input id="profile.surename" name="profile.surname" type="text" placeholder="Please enter your surename" class="form-control input-md">
+                                <input id="profile.surname" name="profile.surname" type="text" placeholder="Please enter your surname" class="form-control input-md">
                             </div>
                         </div>
 						
