--- a/www/addSession.html
+++ b/www/addSession.html
@@ -18,29 +18,29 @@
                     <div class="form-group">
 
                         <!-- Form Name -->
-                        <legend>Add a session for Project X</legend>
+                        <legend id="pageHead"></legend>
 
                         <!-- Datepicker date input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="session.date">Date</label>
+                            <label class="col-md-4 control-label">Date</label>
                             <div class="col-md-8">
-                                <div id="date"></div>
+                                <div id="date"><input id="session.date" type="text" class="hidden"/></div>
                             </div>
                         </div>
 
                         <!-- Datepicker startTime input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="session.start">Begin of working time</label>
+                            <label class="col-md-4 control-label">Begin of working time</label>
                             <div class="col-md-8">
-                                <div id="startTime"></div>
+                                <div id="startTime"><input id="session.start" type="text" class="hidden"/></div>
                             </div>
                         </div>
 
                         <!-- Datepicker stopTime input-->
                         <div class="form-group">
-                            <label class="col-md-4 control-label" for="session.stop">End of working time</label>
+                            <label class="col-md-4 control-label">End of working time</label>
                             <div class="col-md-8">
-                                <div id="stopTime"></div>
+                                <div id="stopTime"><input id="session.stop" type="text" class="hidden"/></div>
                             </div>
                         </div>
 
@@ -48,8 +48,8 @@
                         <div class="form-group">
                             <label class="control-label" for="submit"></label>
                             <div>
-                                <button class="btn btn-info" onclick="TODO!!!!">Save</button>
-                                <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Cancel</a>
+                                <button class="btn btn-info" onclick="addSession()">Save</button>
+                                <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Return to main screen</a>
                             </div>
                         </div>
 
@@ -59,27 +59,28 @@
         </div>
         <script src="js/jquery-2.1.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/moment-with-locales.js"></script>
-        <script src="js/bootstrap-datetimepicker.js"></script>
         <script src="cordova.js"></script>
         <script src="SQLitePlugin.js"></script>
-        <script src="js/index.js"></script>
-        <script src="js/createProject.js"></script>
+        <script src="js/moment-with-locales.js"></script>
+        <script src="js/bootstrap-datetimepicker.js"></script>
+		<script src="js/addSession.js"></script>
 
         <script type="text/javascript">
             $(function()
             {
                 $('#date').datetimepicker({
-                    format: 'L',
+                    format: 'YYYY/MM/DD',
                     inline: true
                 });
                 $('#startTime').datetimepicker({
                     format: 'HH:mm',
-                    inline: true
+                    inline: true,
+					defaultDate : moment("08:00", "HH:mm")
                 });
                 $('#stopTime').datetimepicker({
                     format: 'HH:mm',
-                    inline: true
+                    inline: true,
+					defaultDate : moment("16:00", "HH:mm")
                 });
             });
         </script>
