--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,19 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <script>
+            // include Navbar
+            $(function()
+            {
+                $("#includeNavbar").load("navbar.html");
+            });
+        </script>
         <title>MobileTimeRecording</title>
     </head>
     <body>
+        <!-- Navbar -->
+        <div class="container" id="includeNavbar"></div>
         <!-- project list container -->
         <div class="container">
             <div class="row">
@@ -55,7 +65,7 @@
             </div>
         </div>
 
-        <script src="js/jquery-2.1.3.min.js"></script>
+        
         <script src="js/bootstrap.min.js"></script>
         <script src="cordova.js"></script>
         <script src="SQLitePlugin.js"></script>
