updated the create profile functionality to be able to edit the profile afterwards (user story #8)

--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
         <!-- create profile button -->
         <div class="container">
             <div class="form-group">
-                <a href="createProfile.html" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-plus"></span> create profile</a>
+                <a href="createProfile.html" class="btn btn-warning btn-block"><span class="glyphicon glyphicon-plus"></span> edit profile</a>
             </div>
         </div>
 
