--- a/www/createProfile.html
+++ b/www/createProfile.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />  
-        <title>Create profile</title>
+        <title>Edit profile</title>
     </head>
     <body>
         <div class="container">
@@ -16,13 +16,14 @@
                 <div class="col-md-12">
                     <div class="form-horizontal">
                         <!-- Form Name -->
-                        <legend>Create profile</legend>
+                        <legend>Edit profile</legend>
 
                         <!-- Personal ID input-->
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="profile.id">Personal ID</label>
                             <div class="col-md-4">
                                 <input id="profile.id" name="profile.id" type="number" placeholder="Please enter your personal ID" class="form-control input-md">
+                                <p class="help-block">Personal ID is required.</p>
                             </div>
                         </div>
 
