added predefined special projects (user story #22)

--- a/www/index.html
+++ b/www/index.html
@@ -58,10 +58,16 @@
                 <button class="btn btn-default btn-block" onclick="printSessions()">print Sessions table to console</button>
             </div>
         </div>
-        <!-- dev button to drop all projects from the database -->
+        <!-- dev button to delete all projects from the database -->
         <div class="container">
             <div class="form-group">
-                <button class="btn btn-danger btn-block" onclick="dropProjects()">DROP ALL PROJECTS</button>
+                <button class="btn btn-danger btn-block" onclick="deleteProjects()">DELETE ALL PROJECTS</button>
+            </div>
+        </div>
+        <!-- dev button to drop table projects -->
+        <div class="container">
+            <div class="form-group">
+                <button class="btn btn-danger btn-block" onclick="dropTableProjects()">DROP TABLE PROJECTS</button>
             </div>
         </div>
 
