--- a/www/addSession.html
+++ b/www/addSession.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.css"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <script>
+            // include Navbar
+            $(function()
+            {
+                $("#includeNavbar").load("navbar.html");
+            });
+        </script>
         <title>Add a session</title>
     </head>
     <body>
+        <!-- Navbar -->
+        <div class="container" id="includeNavbar"></div>
+        <!-- Add session container -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -57,7 +68,6 @@
                 </div>
             </div>
         </div>
-        <script src="js/jquery-2.1.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="cordova.js"></script>
         <script src="SQLitePlugin.js"></script>
