--- a/www/createProfile.html
+++ b/www/createProfile.html
@@ -7,10 +7,21 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-        <link rel="stylesheet" type="text/css" href="css/index.css" />  
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <script src="js/jquery-2.1.3.min.js"></script>
+        <script>
+            // include Navbar
+            $(function()
+            {
+                $("#includeNavbar").load("navbar.html");
+            });
+        </script>
         <title>Edit profile</title>
     </head>
     <body>
+        <!-- Navbar -->
+        <div class="container" id="includeNavbar"></div>
+        <!-- Create profile container -->
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -99,8 +110,6 @@
                 </div>
             </div>
         </div>
-
-        <script src="js/jquery-2.1.3.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="cordova.js"></script>
         <script src="SQLitePlugin.js"></script>
