--- a/www/navbar.html
+++ b/www/navbar.html
@@ -1,9 +1,9 @@
 <div class="row navbar-row">
 	<div class="col-xs-12">
 		<div class="btn-group btn-group-3">
-			<a class="btn btn-default"><span class="glyphicon glyphicon-home"></span><span class="glyphicon-class">Home</span></a>
-			<a class="btn btn-default"><span class="glyphicon glyphicon-list-alt"></span><span class="glyphicon-class">Overview</span></a>
-			<a class="btn btn-default"><span class="glyphicon glyphicon-cog"></span><span class="glyphicon-class">Settings</span></a>
+			<a href="index.html" class="btn btn-default"><span class="glyphicon glyphicon-home"></span><span class="glyphicon-class">Home</span></a>
+			<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-list-alt"></span><span class="glyphicon-class">Overview</span></a>
+			<a href="#" class="btn btn-default"><span class="glyphicon glyphicon-cog"></span><span class="glyphicon-class">Settings</span></a>
 		</div>
 	</div>
 </div>
