added delete/archive functionality and confirmation modal (user story #10)

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,10 @@
             </div>
         </div>
 
+        <!-- Modal container -->
+        <div id="deleteProjectModal" class="modal fade">
+        </div>
+
         <!-- add new project button -->
         <div class="container">
             <div class="form-group">
