--- a/www/createProfile.html
+++ b/www/createProfile.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <script src="js/jquery-2.1.3.min.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
         <script>
             // include Navbar
             $(function()
@@ -25,7 +26,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="form-horizontal">
+                    <form class="form-horizontal">
                         <!-- Form Name -->
                         <legend>Edit profile</legend>
 
@@ -33,8 +34,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="profile.id">Personal ID</label>
                             <div class="col-md-4">
-                                <input id="profile.id" name="profile.id" type="number" placeholder="Please enter your personal ID" class="form-control input-md">
-                                <p class="help-block">Personal ID is required.</p>
+                                <input id="profile.id" name="id" type="number" placeholder="Please enter your personal ID" class="form-control input-md" required>
                             </div>
                         </div>
 
@@ -42,7 +42,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="profile.forename">Forename</label>
                             <div class="col-md-4">
-                                <input id="profile.forename" name="profile.forename" type="text" placeholder="Please enter your forename" class="form-control input-md">
+                                <input id="profile.forename" name="forename" type="text" placeholder="Please enter your forename" class="form-control input-md" required>
                             </div>
                         </div>
 						
@@ -50,7 +50,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="profile.surname">Surname</label>
                             <div class="col-md-4">
-                                <input id="profile.surname" name="profile.surname" type="text" placeholder="Please enter your surname" class="form-control input-md">
+                                <input id="profile.surname" name="surname" type="text" placeholder="Please enter your surname" class="form-control input-md" required>
                             </div>
                         </div>
 						
@@ -59,7 +59,7 @@
                             <label class="col-md-4 control-label" for="profile.weekly_working_time">Weekly Working Time</label>
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input id="profile.weekly_working_time" name="profile.weekly_working_time" type="number" placeholder="Please enter your weekly working time" class="form-control input-md">
+                                    <input id="profile.weekly_working_time" name="weekly_working_time" type="number" placeholder="Please enter your weekly working time" class="form-control input-md" required>
                                     <span class="input-group-addon">hours</span>
                                 </div>
                             </div>
@@ -70,7 +70,7 @@
                             <label class="col-md-4 control-label" for="profile.total_vacation_time">Vacation Time</label>
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input id="profile.total_vacation_time" name="profile.total_vacation_time" type="number" placeholder="Please enter your vacation time" class="form-control input-md">
+                                    <input id="profile.total_vacation_time" name="total_vacation_time" type="number" placeholder="Please enter your vacation time" class="form-control input-md" required>
                                     <span class="input-group-addon">days</span>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                             <label class="col-md-4 control-label" for="profile.current_overtime">Current Overtime Hours</label>
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input id="profile.current_overtime" name="profile.current_overtime" type="number" placeholder="Please enter your current overtime hours" class="form-control input-md">
+                                    <input id="profile.current_overtime" name="current_overtime" type="number" placeholder="Please enter your current overtime hours" class="form-control input-md" required>
                                     <span class="input-group-addon">hours</span>
                                 </div>
                             </div>
@@ -92,7 +92,7 @@
                             <label class="col-md-4 control-label" for="profile.current_vacation_time">Current Vacation Days</label>
                             <div class="col-md-4">
                                 <div class="input-group">
-                                    <input id="profile.current_vacation_time" name="profile.current_vacation_time" type="number" placeholder="Please enter your current vacation days" class="form-control input-md">
+                                    <input id="profile.current_vacation_time" name="current_vacation_time" type="number" placeholder="Please enter your current vacation days" class="form-control input-md" required>
                                     <span class="input-group-addon">days</span>
                                 </div>
                             </div>
@@ -102,11 +102,11 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label"></label>
                             <div class="col-md-8">
-                                <button class="btn btn-info" onclick="createProfile()">Save</button>
+                                <button type="submit" class="btn btn-info">Save</button>
                                 <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Return to main screen</a>
                             </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
