added personal ID validation functionality (user story #28)

--- a/www/createProfile.html
+++ b/www/createProfile.html
@@ -34,7 +34,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="profile.id">Personal ID</label>
                             <div class="col-md-4">
-                                <input id="profile.id" name="id" type="number" placeholder="Please enter your personal ID" class="form-control input-md" required>
+                                <input id="profile.id" name="profileId" type="number" placeholder="Please enter your personal ID" class="form-control input-md" required>
                             </div>
                         </div>
 
