--- a/www/createProject.html
+++ b/www/createProject.html
@@ -27,6 +27,7 @@
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <script src="js/jquery-2.1.3.min.js"></script>
+        <script src="js/jquery.validate.min.js"></script>
         <script>
             // include Navbar
             $(function()
@@ -43,7 +44,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="form-horizontal">
+                    <form class="form-horizontal">
 
                         <!-- Form Name -->
                         <legend>Create a new project</legend>
@@ -52,8 +53,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="project.id">Project ID</label>
                             <div class="col-md-4">
-                                <input id="project.id" name="project.id" type="text" placeholder="Please enter the project ID" class="form-control input-md" required="">
-
+                                <input id="project.id" name="projectId" type="text" placeholder="Please enter the project ID" class="form-control input-md" required>
                             </div>
                         </div>
 
@@ -61,8 +61,7 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="project.name">Project name</label>
                             <div class="col-md-4">
-                                <input id="project.name" name="project.name" type="text" placeholder="Please enter the project name" class="form-control input-md" required="">
-
+                                <input id="project.name" name="name" type="text" placeholder="Please enter the project name" class="form-control input-md" required>
                             </div>
                         </div>
 
@@ -70,12 +69,12 @@
                         <div class="form-group">
                             <label class="col-md-4 control-label" for="submit"></label>
                             <div class="col-md-8">
-                                <button class="btn btn-info" onclick="insertProject()">Save</button>
-                                <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Cancel</a>
+                                <button class="btn btn-info" type="submit">Save</button>
+                                <a href="index.html" id="cancel" name="cancel" class="btn btn-danger">Return to main screen</a>
                             </div>
                         </div>
 
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
