--- a/www/index.html
+++ b/www/index.html
@@ -31,9 +31,9 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-home"></i> Home</a>
-          <a href="#" class="btn btn-navbar"><i class="fa fa-line-chart fa-navbar"></i> Overview</a>
-          <a href="#/editUser" class="btn btn-navbar"><i class="fa fa-cog fa-navbar"></i> Settings</a>
+          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-home"></i> Home</a>
+          <a href="#" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Overview</a>
+          <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i> Settings</a>
         </div>
       </div>
 
