--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,9 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-home"></i> Home</a>
-          <a href="#" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Overview</a>
+          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-home"></i> Recording</a>
+          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i> Projects</a>
+          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
           <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i> Settings</a>
         </div>
       </div>
