--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          MobileTimeRecording
+          MTR
         </div>
         <div class="btn-group pull-left" ui-yield-to="navbarMenu">
         </div>
@@ -48,10 +48,10 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i> Recording</a>
-          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i> Projects</a>
-          <a href="#/dashboard" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i> Dashboard</a>
-          <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i> Settings</a>
+          <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i><span class="navbar-text"> Recording</span></a>
+          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i><span class="navbar-text"> Projects</span></a>
+          <a href="#/dashboard" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i><span class="navbar-text"> Dashboard</span></a>
+          <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i><span class="navbar-text"> Settings</span></a>
         </div>
       </div>
 
