fixed scrolling bug in home view and changed app name to MobileTimeAccounting in order to match the iOS provisioning profile

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-    MobileTimeRecording
+    MobileTimeAccounting
     Copyright (C) 2015  AMOS Team 5 SS15
 
     This program is free software: you can redistribute it and/or modify
@@ -19,7 +19,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>MobileTimeRecording</title>
+    <title>MobileTimeAccounting</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -38,7 +38,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" ui-yield-to="title">
-          MTR
+          MTA
         </div>
         <div class="btn-group pull-left" ui-yield-to="navbarMenu">
         </div>
