added corporate id icons to bottom navbar and removed unused icons from images folder

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,10 +48,10 @@
 
       <div class="navbar navbar-app navbar-absolute-bottom">
         <div class="btn-group justified">
-          <a href="#/" class="btn btn-navbar"><i class="fa fa-home fa-navbar"></i><span class="navbar-text"> Recording</span></a>
-          <a href="#/" class="btn btn-navbar"><i class="glyphicon glyphicon-list"></i><span class="navbar-text"> Projects</span></a>
-          <a href="#/dashboard" class="btn btn-navbar"><i class="glyphicon glyphicon-dashboard"></i><span class="navbar-text"> Dashboard</span></a>
-          <a href="#/editUser" class="btn btn-navbar"><i class="glyphicon glyphicon-cog"></i><span class="navbar-text"> Settings</span></a>
+          <a href="#/" class="btn btn-navbar"><img src="images/RecordingIcon.png" height="25" width="25"><span class="navbar-text"> Recording</span></a>
+          <a href="#/" class="btn btn-navbar"><img src="images/ProjectsIcon.png" height="25" width="25"><span class="navbar-text"> Projects</span></a>
+          <a href="#/dashboard" class="btn btn-navbar"><img src="images/DashboardIcon.png" height="25" width="25"></i><span class="navbar-text"> Dashboard</span></a>
+          <a href="#/editUser" class="btn btn-navbar"><img src="images/SettingsIcon.png" height="25" width="25"></i><span class="navbar-text"> Settings</span></a>
         </div>
       </div>
 
